Edit Mode still visible when swiping. Remove swipe-left swipe-right events that were interfering with panmove event. Change route when changing views from swipe. Make fixed edit element only visible in expenses view.

--- a/GlowExpense/app/styles/_theme.scss
+++ b/GlowExpense/app/styles/_theme.scss
@@ -2,23 +2,12 @@ body {
     overflow-x: hidden;
 }
 
-// CUSTOM CHECKBOX
-input[type=checkbox] { /* hide default checkbox */
-    display:none;
-}
-input[type=checkbox] + label:before {
-  font-family: 'icon-font';
-  display: inline-block;
-}
-input[type=checkbox] + label:before { /* unchecked */
-    content: "\f096";
-    letter-spacing: 10px;
-    color: #808080;
-}
-input[type=checkbox]:checked + label:before { /* checked */
-    content: "\f046";
-    color: #97BD00;
-    letter-spacing: 5px;
+input[type=checkbox] {
+  /* All browsers except webkit*/
+  transform: scale(1.2);
+
+  /* Webkit browsers*/
+  -webkit-transform: scale(1.2);
 }
 
 .hide-text-overflow {
